force-app/main/default/objects/UserSession__c/UserSession__c.object-meta.xml
<CustomObject>
    <description>Stores user session state for the API Version Updater application</description>
    <label>User Session</label>
    <nameField>
        <displayFormat>SES-{0000}</displayFormat>
        <label>Session Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Sessions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>