force-app/main/default/objects/UserSession__c/fields/CurrentChangePlan__c.field-meta.xml
<CustomField>
    <fullName>CurrentChangePlan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The currently active change plan for this session</description>
    <label>Current Change Plan</label>
    <referenceTo>ChangePlan__c</referenceTo>
    <relationshipName>UserSessions</relationshipName>
    <type>Lookup</type>
</CustomField>