force-app/main/default/objects/UserSession__c/fields/CurrentDeploymentRun__c.field-meta.xml
<CustomField>
    <fullName>CurrentDeploymentRun__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The currently active deployment run for this session</description>
    <label>Current Deployment Run</label>
    <referenceTo>DeploymentRun__c</referenceTo>
    <relationshipName>UserSessions</relationshipName>
    <type>Lookup</type>
</CustomField>