force-app/main/default/objects/UserSession__c/fields/CurrentScan__c.field-meta.xml
<CustomField>
    <fullName>CurrentScan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The currently active scan for this session</description>
    <label>Current Scan</label>
    <referenceTo>Scan__c</referenceTo>
    <relationshipName>UserSessions</relationshipName>
    <type>Lookup</type>
</CustomField>