force-app/main/default/objects/UserSession__c/fields/LastAccessedAt__c.field-meta.xml
<CustomField>
    <fullName>LastAccessedAt__c</fullName>
    <description>When this session was last accessed</description>
    <label>Last Accessed At</label>
    <type>DateTime</type>
</CustomField>