force-app/main/default/objects/UserSession__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user this session belongs to</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UserSessions</relationshipName>
    <type>Lookup</type>
</CustomField>